changes in icons and text

--- a/pit_app/templates/home/index.html
+++ b/pit_app/templates/home/index.html
@@ -36,7 +36,7 @@
 
         <div class="giant-number-block col-xs-4">
           <span class="giant-number">{{ tges }}</span>
-          <span class="text-muted">TGes</span>
+          <span class="text-muted">TGEs</span>
         </div>
 
         <div class="giant-number-block col-xs-4">
