--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -8,7 +8,7 @@
         <li><h5>Navigation Panel</h5></li>
         <li><a href="#orgSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
         <li><a href="#orgGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
-        <li><a href="#orgBreakdown"><i class="fa fa-bars fa-fw"></i> TGEs</a></li>
+        <li><a href="#orgBreakdown"><i class="fa fa-table fa-fw"></i> TGEs</a></li>
       </ul>
     </div>
   </div>
@@ -58,7 +58,7 @@
       <div>
       	<div class="panel panel-default" id="orgBreakdown">
           <div class="panel-heading">
-            <i class="fa fa-bars fa-fw"></i> TGEs
+            <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
           </div>
           
           <div class="panel-body">
