--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -8,7 +8,7 @@
         <li><h5>Navigation Panel</h5></li>
         <li><a href="#tgeSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
         <li><a href="#tgeGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
-        <li><a href="#tgeBreakdown"><i class="fa fa-bars fa-fw"></i> TGE breakdown</a></li>
+        <li><a href="#tgeBreakdown"><i class="fa fa-table fa-fw"></i> TGE breakdown</a></li>
 
         <li><a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Statistics</span></a></li>
         <!-- <li><a href="#"><i class="fa fa-edit fa-fw"></i> PSM</a></li>
@@ -65,7 +65,7 @@
 
         <div class="panel panel-default" id="tgeBreakdown">
           <div class="panel-heading">
-            <i class="fa fa-bar-chart-o fa-fw"></i> TGE Breakdown
+            <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
           </div>
           
           <div class="panel-body">
