--- a/pit_app/templates/search/results.html
+++ b/pit_app/templates/search/results.html
@@ -5,7 +5,7 @@
   <div id="page-wrap">
     <input type="hidden" id="searchData" value={{ searchData }}>
     <input type="hidden" id="searchType" value={{ searchType }}>
-    <span><p><h4>Graph of TGE breakdown</h4></p></span>
+    <span><p><h4>Graph of Translated Genomic Elements (TGEs)</h4></p></span>
     <div class="col-md-8 col-md-offset-3" style="min-height: 200px">
       <div id="sequence"></div>
       <div id="chart">
