--- a/pit_app/templates/layout.html
+++ b/pit_app/templates/layout.html
@@ -42,7 +42,7 @@
           <ul class="nav navbar-nav navbar-right" style="font-weight: bold; font-size: 15.5px">
             <li><a href="/#about">About</a></li>
             <li><a data-toggle="modal" data-target="#help" style="cursor: pointer;">Help</a></li>
-            <li><a data-toggle="modal" data-target="#search" style="cursor: pointer;">Search</a></li>
+            <li><a data-toggle="modal" data-target="#search" style="cursor: pointer;">Search <i class="fa fa-search fa-fw"></i></a></li>
           </ul>
         </div>
       </div>
