--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -27,7 +27,8 @@
       <div class="row">
         <div>
           <div class="panel panel-default" id="tgeSummary">
-            <div class="panel-heading"><i class="fa fa-bar-chart-o fa-fw"></i> Summary</div>
+            <div class="panel-heading"><i class="fa fa-bar-chart-o fa-fw"></i> Summary 
+            <a rel='tooltip'><i class="fa fa-info pull-right helpTip" aria-hidden="true"></i></a></div>
             
             <div class="panel-body">
               <div class="row" style="margin-left:5px">
@@ -48,7 +49,8 @@
 
         <div id="tgeGraph" class="panel panel-default sunburst" style="position: relative !important;">
           <div class="panel-heading">
-            <i class="fa fa-pie-chart fa-fw"></i> Graph
+            <i class="fa fa-pie-chart fa-fw"></i> Graph 
+            <i class="fa fa-info pull-right helpTip" aria-hidden="true"></i>
           </div>
           
           <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of TGE breakdown</h5></p></span>
@@ -66,6 +68,7 @@
         <div class="panel panel-default" id="tgeBreakdown">
           <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
+            <i class="fa fa-info pull-right helpTip" aria-hidden="true"></i>
           </div>
           
           <div class="panel-body">
@@ -105,6 +108,7 @@
         <div class="panel panel-default" id="massspec_stats">
           <div class="panel-heading ">
             <i class="fa fa-bar-chart-o fa-fw"></i> Mass-Spectrometry Data Statistics
+            <i class="fa fa-info pull-right helpTip" aria-hidden="true"></i>
           </div>
             
           <div class="panel-body collapse in">
@@ -121,4 +125,6 @@
     </div>
   </div>
 </div> 
+
+
 {% endblock %}
